spacing issues

--- a/css/global.css
+++ b/css/global.css
@@ -158,7 +158,7 @@ h3 {
 div.content {
 	margin:0 auto;
 	max-width:820px;
-	padding:0 10px;
+	padding:40px 10px;
 }
 
 .posts img {
